# StudentManagementSystem

./: CMakeLists.txt  README.md
include/: User.h  libs.h  student.h  teacher.h
src/: auth.cpp  auth.h  db.cpp  db.h  main.cpp  management.cpp  management.h
